--- a/style.css
+++ b/style.css
@@ -448,25 +448,46 @@ body::-webkit-scrollbar-thumb {
 }
 
 .products {
-  padding: 32px 0;
+  padding-top: 32px;
+  display: flex;
+  justify-content: space-around;
+  gap: 24px;
+}
+@media (max-width: 576px) {
+  .products {
+    flex-direction: column;
+  }
 }
 
 .product {
-  margin: 24px 0;
+  font-size: 22px;
   min-height: 450px;
   background: white;
-  border: 1px solid #000000;
+  margin: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 3px solid #000000;
   box-shadow: 4px 4px 0px #000000;
   border-radius: 10px;
 }
-.product:first-child {
-  margin: 0;
+@media (max-width: 576px) {
+  .product {
+    margin: 1rem 0;
+  }
+  .product:first-child {
+    margin: 0;
+  }
 }
 .product .product--title {
   font-size: 1.5em;
   font-weight: 600;
   text-align: center;
   color: rgb(88, 92, 93);
+  height: 50px;
+}
+.product .product--content--list {
+  flex: 1;
 }
 .product .product--price {
   font-size: 1.2em;
@@ -478,11 +499,27 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
 }
 .product .btn {
-  padding: 0.1em 0.4em;
+  padding: 0.2em 0.8em;
+}
+.product .btn span {
+  margin-right: 10px;
+}
+@media (max-width: 576px) {
+  .product .btn {
+    padding: 0.1em 0.4em;
+  }
+  .product .btn span {
+    display: none;
+  }
 }
 
 .product > * {
-  padding: 0.5rem;
+  padding: 1rem;
+}
+@media (max-width: 576px) {
+  .product > * {
+    padding: 0.5rem;
+  }
 }
 
 .cart::before {
