--- a/style.css
+++ b/style.css
@@ -159,14 +159,14 @@ html {
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 13,110,253;
-  --bs-secondary-rgb: 108,117,125;
-  --bs-success-rgb: 25,135,84;
-  --bs-info-rgb: 13,202,240;
-  --bs-warning-rgb: 255,193,7;
-  --bs-danger-rgb: 220,53,69;
-  --bs-light-rgb: 248,249,250;
-  --bs-dark-rgb: 33,37,41;
+  --bs-primary-rgb: 13, 110, 253;
+  --bs-secondary-rgb: 108, 117, 125;
+  --bs-success-rgb: 25, 135, 84;
+  --bs-info-rgb: 13, 202, 240;
+  --bs-warning-rgb: 255, 193, 7;
+  --bs-danger-rgb: 220, 53, 69;
+  --bs-light-rgb: 248, 249, 250;
+  --bs-dark-rgb: 33, 37, 41;
   --bs-primary-text: #0a58ca;
   --bs-secondary-text: #6c757d;
   --bs-success-text: #146c43;
@@ -191,12 +191,13 @@ html {
   --bs-danger-border-subtle: #f1aeb5;
   --bs-light-border-subtle: #e9ecef;
   --bs-dark-border-subtle: #adb5bd;
-  --bs-white-rgb: 255,255,255;
-  --bs-black-rgb: 0,0,0;
-  --bs-body-color-rgb: 33,37,41;
-  --bs-body-bg-rgb: 255,255,255;
-  --bs-font-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-  --bs-font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+  --bs-white-rgb: 255, 255, 255;
+  --bs-black-rgb: 0, 0, 0;
+  --bs-body-color-rgb: 33, 37, 41;
+  --bs-body-bg-rgb: 255, 255, 255;
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans",
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
   --bs-body-font-size: 1rem;
@@ -204,22 +205,22 @@ html {
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
   --bs-emphasis-color: #000;
-  --bs-emphasis-color-rgb: 0,0,0;
+  --bs-emphasis-color-rgb: 0, 0, 0;
   --bs-secondary-color: rgba(33, 37, 41, 0.75);
-  --bs-secondary-color-rgb: 33,37,41;
+  --bs-secondary-color-rgb: 33, 37, 41;
   --bs-secondary-bg: #e9ecef;
-  --bs-secondary-bg-rgb: 233,236,239;
+  --bs-secondary-bg-rgb: 233, 236, 239;
   --bs-tertiary-color: rgba(33, 37, 41, 0.5);
-  --bs-tertiary-color-rgb: 33,37,41;
+  --bs-tertiary-color-rgb: 33, 37, 41;
   --bs-tertiary-bg: #f8f9fa;
-  --bs-tertiary-bg-rgb: 248,249,250;
+  --bs-tertiary-bg-rgb: 248, 249, 250;
   --bs-body-bg: #fff;
-  --bs-body-bg-rgb: 255,255,255;
+  --bs-body-bg-rgb: 255, 255, 255;
   --bs-link-color: #0d6efd;
-  --bs-link-color-rgb: 13,110,253;
+  --bs-link-color-rgb: 13, 110, 253;
   --bs-link-decoration: underline;
   --bs-link-hover-color: #0a58ca;
-  --bs-link-hover-color-rgb: 10,88,202;
+  --bs-link-hover-color-rgb: 10, 88, 202;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
   --bs-border-width: 1px;
@@ -265,8 +266,15 @@ body {
   max-width: 1280px;
 }
 
+header,
+main,
+footer {
+  padding: 0 3rem;
+}
 @media (max-width: 576px) {
-  header, main, footer {
+  header,
+  main,
+  footer {
     padding: 0 16px;
   }
 }
@@ -393,6 +401,7 @@ strong {
 h1 {
   font-family: "TT Norms";
   font-style: normal;
+  text-transform: uppercase;
   font-weight: 700;
   font-size: 25px;
   line-height: 30px;
@@ -526,7 +535,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .hero {
-  padding: 40px 30px;
+  padding: 3rem 0;
 }
 .hero .hero--picture {
   width: 100%;
@@ -772,6 +781,7 @@ h1 {
 p {
   line-height: 155%;
   padding: 0.6em 0.3em;
+  font-size: 16px;
 }
 
 .bsr--content {
@@ -806,7 +816,8 @@ p {
   border-radius: 10px;
 }
 
-.event--2023::after, .event::before {
+.event--2023::after,
+.event::before {
   position: absolute;
   font-family: "TT Norms";
   font-style: normal;
@@ -877,7 +888,7 @@ p {
   top: 0;
   bottom: calc(100% - 3rem);
   border-radius: 5px 5px 0 0;
-  background: #A3D3BC;
+  background: #a3d3bc;
 }
 @media (max-width: 576px) {
   .border-card {
@@ -904,24 +915,28 @@ p {
   }
 }
 
-.contact--address, .contact--phone {
+.contact--address,
+.contact--phone {
   padding: 0.4em 0;
 }
 @media (max-width: 576px) {
-  .contact--address, .contact--phone {
+  .contact--address,
+  .contact--phone {
     padding-left: 1em;
     margin-left: 0.8em;
     position: relative;
   }
 }
 
-.contact--phone::before, .contact--address::before {
+.contact--phone::before,
+.contact--address::before {
   margin-right: 0.7em;
   vertical-align: middle;
   position: relative;
 }
 @media (max-width: 576px) {
-  .contact--phone::before, .contact--address::before {
+  .contact--phone::before,
+  .contact--address::before {
     position: absolute;
     top: 7px;
     left: -0.2em;
@@ -961,7 +976,8 @@ p {
   }
 }
 
-input, textarea {
+input,
+textarea {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
@@ -989,6 +1005,92 @@ label {
 @media (max-width: 576px) {
   label {
     margin: 0.3rem 0;
+  }
+}
+
+.list-arrow li {
+  margin-left: 3em;
+  margin-top: 1rem;
+  position: relative;
+}
+
+.list-arrow li::before {
+  content: url(assets/images/icons/double-arrow.svg);
+  position: absolute;
+  left: -3em;
+  top: -0.45em;
+}
+
+.subtitle {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 38px;
+  line-height: 45px;
+  margin-top: 1.7em;
+  margin-bottom: 1em;
+}
+.subtitle::before {
+  content: "";
+  background-image: url(./assets/images/branche.png);
+  background-size: 100% 100%;
+  display: inline-block;
+  height: 56px;
+  width: 80px;
+  vertical-align: bottom;
+  margin-left: 0.3em;
+}
+@media (max-width: 576px) {
+  .subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+  }
+  .subtitle::before {
+    height: 28px;
+    width: 40px;
+  }
+}
+
+.casalina--flex {
+  display: flex;
+  gap: 2rem;
+}
+.casalina--flex .casalina--text {
+  margin-top: 1rem;
+}
+@media (max-width: 576px) {
+  .casalina--flex {
+    gap: 0;
+    flex-direction: column;
+  }
+}
+
+.farm--container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  padding: 0 2rem;
+}
+.farm--container img {
+  width: 100%;
+}
+@media (max-width: 576px) {
+  .farm--container {
+    grid-template-columns: 1fr;
+    gap: 0;
+    padding: 0;
+  }
+  .farm--container img {
+    margin: 0.2rem 5%;
+    width: 90%;
+  }
+}
+
+@media (max-width: 576px) {
+  .el-caporalato img,
+  .campagna-e-vita img {
+    margin: 0.4rem 10%;
+    width: 80%;
   }
 }
 
