--- a/input.scss
+++ b/input.scss
@@ -25,7 +25,7 @@ $gray: rgba(97, 101, 99, 1);
 }
 
 :root {
-  font-size: 15px;
+  font-size: 16px;
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
@@ -165,9 +165,18 @@ body {
 header,
 main,
 footer {
-  padding: 0 3rem;
+  padding: 0 5rem;
   @include respond-to("xs") {
     padding: 0 16px;
+  }
+}
+
+main {
+  padding-bottom: 5rem;
+  padding-top: 2rem;
+  @include respond-to("xs") {
+    padding: 32px 16px;
+    font-size: 15px;
   }
 }
 
@@ -450,9 +459,9 @@ body::-webkit-scrollbar-thumb {
   figcaption {
     position: absolute;
     width: 100%;
-    height: 88px;
+    height: 100px;
     left: 0px;
-    top: calc(100% - 94px);
+    top: calc(100% - 110px);
     background: rgba(16, 16, 16, 0.2);
     border-radius: 10px;
     @include respond-to("xs") {
@@ -468,7 +477,7 @@ body::-webkit-scrollbar-thumb {
       font-family: tt-norm-medium;
       color: #ffffff;
       padding-left: 20px;
-      margin-top: 16px;
+      margin-top: -1.3rem;
     }
     button {
       display: none;
@@ -521,9 +530,7 @@ body::-webkit-scrollbar-thumb {
   img {
     max-width: 500px;
   }
-  padding-bottom: 80px;
   @include respond-to("xs") {
-    padding-bottom: 40px;
     img {
       max-width: 150px;
     }
@@ -669,6 +676,9 @@ p {
   line-height: 155%;
   padding: 0.6em 0.3em;
   font-size: 16px;
+  @include respond-to("xs") {
+    font-size: 14px;
+  }
 }
 
 .bsr--content {
@@ -736,9 +746,6 @@ p {
 
 // *************** CONTACT
 
-.contact {
-  padding: 3rem 0;
-}
 .contact--card {
   @include big-shadow();
   padding: 3rem;
@@ -897,12 +904,12 @@ label {
     height: 56px;
     width: 80px;
     vertical-align: bottom;
-    margin-left: 0.3em;
   }
   @include respond-to("xs") {
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
+    margin-bottom: 0;
     &::before {
       height: 28px;
       width: 40px;
@@ -910,15 +917,16 @@ label {
   }
 }
 
-.casalina--flex {
-  display: flex;
+.casalina--container {
+  display: grid;
+  grid-template-columns: 1.3fr 1fr;
   gap: 2rem;
   .casalina--text {
     margin-top: 1rem;
   }
   @include respond-to("xs") {
     gap: 0;
-    flex-direction: column;
+    grid-template-columns: 1fr;
   }
 }
 
@@ -926,7 +934,6 @@ label {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
-  padding: 0 2rem;
   img {
     width: 100%;
   }
@@ -947,34 +954,68 @@ label {
 .campagna-e-vita {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
-
-  p:first-child {
-    padding-top: 0;
+  gap: 4rem;
+  figure:first-child {
+    & p {
+      padding-top: 0;
+    }
+    & img {
+      margin-top: 1rem;
+    }
   }
   @include respond-to("xs") {
     grid-template-columns: 1fr;
+    gap: 0;
+    figure:first-child {
+      padding-top: 0.6em;
+    }
     figure:last-child {
       display: flex;
       flex-direction: column;
       img {
         order: 2;
+        margin-top: 1rem;
       }
     }
+  }
+}
+
+.col-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.5em;
+  @include respond-to("xs") {
+    display: inline;
+    span {
+      line-height: 155%;
+      font-size: 14px;
+    }
+  }
+}
+
+.col-3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.5em;
+  @include respond-to("xs") {
+    grid-template-columns: 1fr;
   }
 }
 
 .el-caporalato {
   display: grid;
   grid-template-columns: 2fr 3fr;
-  gap: 2rem;
+  gap: 4rem;
   @include respond-to("xs") {
     grid-template-columns: 1fr;
+    gap: 0;
     .reverse-order-xs {
       display: flex;
       flex-direction: column;
+
       img {
         order: 2;
+        margin: 1rem auto;
       }
     }
   }
