--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ html {
 }
 
 :root {
-  font-size: 15px;
+  font-size: 16px;
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
@@ -269,13 +269,24 @@ body {
 header,
 main,
 footer {
-  padding: 0 3rem;
+  padding: 0 5rem;
 }
 @media (max-width: 576px) {
   header,
   main,
   footer {
     padding: 0 16px;
+  }
+}
+
+main {
+  padding-bottom: 5rem;
+  padding-top: 2rem;
+}
+@media (max-width: 576px) {
+  main {
+    padding: 32px 16px;
+    font-size: 15px;
   }
 }
 
@@ -547,9 +558,9 @@ body::-webkit-scrollbar-thumb {
 .hero figcaption {
   position: absolute;
   width: 100%;
-  height: 88px;
+  height: 100px;
   left: 0px;
-  top: calc(100% - 94px);
+  top: calc(100% - 110px);
   background: rgba(16, 16, 16, 0.2);
   border-radius: 10px;
 }
@@ -568,7 +579,7 @@ body::-webkit-scrollbar-thumb {
   font-family: tt-norm-medium;
   color: #ffffff;
   padding-left: 20px;
-  margin-top: 16px;
+  margin-top: -1.3rem;
 }
 .hero figcaption button {
   display: none;
@@ -622,14 +633,12 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
   flex-direction: column;
   font-size: 25px;
-  padding-bottom: 80px;
 }
 .conclusion img {
   max-width: 500px;
 }
 @media (max-width: 576px) {
   .conclusion {
-    padding-bottom: 40px;
     font-size: 20px;
   }
   .conclusion img {
@@ -783,6 +792,11 @@ p {
   padding: 0.6em 0.3em;
   font-size: 16px;
 }
+@media (max-width: 576px) {
+  p {
+    font-size: 14px;
+  }
+}
 
 .bsr--content {
   display: flex;
@@ -848,10 +862,6 @@ p {
   text-decoration: line-through;
   left: calc(100vw - 100px);
   width: 100px;
-}
-
-.contact {
-  padding: 3rem 0;
 }
 
 .contact--card {
@@ -1037,13 +1047,13 @@ label {
   height: 56px;
   width: 80px;
   vertical-align: bottom;
-  margin-left: 0.3em;
 }
 @media (max-width: 576px) {
   .subtitle {
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
+    margin-bottom: 0;
   }
   .subtitle::before {
     height: 28px;
@@ -1051,17 +1061,18 @@ label {
   }
 }
 
-.casalina--flex {
-  display: flex;
+.casalina--container {
+  display: grid;
+  grid-template-columns: 1.3fr 1fr;
   gap: 2rem;
 }
-.casalina--flex .casalina--text {
+.casalina--container .casalina--text {
   margin-top: 1rem;
 }
 @media (max-width: 576px) {
-  .casalina--flex {
+  .casalina--container {
     gap: 0;
-    flex-direction: column;
+    grid-template-columns: 1fr;
   }
 }
 
@@ -1069,7 +1080,6 @@ label {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
-  padding: 0 2rem;
 }
 .farm--container img {
   width: 100%;
@@ -1089,14 +1099,21 @@ label {
 .campagna-e-vita {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
+  gap: 4rem;
 }
-.campagna-e-vita p:first-child {
+.campagna-e-vita figure:first-child p {
   padding-top: 0;
+}
+.campagna-e-vita figure:first-child img {
+  margin-top: 1rem;
 }
 @media (max-width: 576px) {
   .campagna-e-vita {
     grid-template-columns: 1fr;
+    gap: 0;
+  }
+  .campagna-e-vita figure:first-child {
+    padding-top: 0.6em;
   }
   .campagna-e-vita figure:last-child {
     display: flex;
@@ -1104,17 +1121,45 @@ label {
   }
   .campagna-e-vita figure:last-child img {
     order: 2;
+    margin-top: 1rem;
+  }
+}
+
+.col-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.5em;
+}
+@media (max-width: 576px) {
+  .col-2 {
+    display: inline;
+  }
+  .col-2 span {
+    line-height: 155%;
+    font-size: 14px;
+  }
+}
+
+.col-3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.5em;
+}
+@media (max-width: 576px) {
+  .col-3 {
+    grid-template-columns: 1fr;
   }
 }
 
 .el-caporalato {
   display: grid;
   grid-template-columns: 2fr 3fr;
-  gap: 2rem;
+  gap: 4rem;
 }
 @media (max-width: 576px) {
   .el-caporalato {
     grid-template-columns: 1fr;
+    gap: 0;
   }
   .el-caporalato .reverse-order-xs {
     display: flex;
@@ -1122,6 +1167,7 @@ label {
   }
   .el-caporalato .reverse-order-xs img {
     order: 2;
+    margin: 1rem auto;
   }
 }
 
